# Hybrid-PERP-DEX

./: .env  Anchor.toml  Cargo.toml  README.md  docker-compose.yml
libs/common-utils/: Cargo.toml
libs/common-utils/src/: lib.rs
libs/settlement-client/: Cargo.toml
libs/settlement-client/src/: lib.rs  signer.rs  types.rs
programs/perp-dex/: Cargo.toml
programs/perp-dex/src/: error.rs  lib.rs  state.rs
programs/perp-dex/src/instructions/: deposit.rs  initialize.rs  mod.rs  settle_trade.rs
programs/perp-dex/tests/: settlement_logic.rs
scripts/: random-orders.sh
services/api-router/: Cargo.toml
services/api-router/src/: main.rs
services/db-processor/: Cargo.toml
services/db-processor/src/: main.rs
services/matching-engine/: Cargo.toml
services/matching-engine/src/: main.rs
services/settlement-worker/: Cargo.toml
services/settlement-worker/src/: main.rs
tests/: integration-test.rs  settlement-test.rs
