[package]
name = "settlement-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
ed25519-dalek = { workspace = true }
anchor-lang = "0.30.1"
hybrid-perp-dex = { path = "../../programs/perp-dex" }
rust_decimal = "1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
common-utils = { workspace = true }
chrono = "0.4"