[package]
name = "api-router"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fred = { version = "9.2", features = ["subscriber-client"] }
rust_decimal = "1.36"
uuid = { version = "1.10", features = ["v4", "serde"] }
common-utils = { path = "../../libs/common-utils" }
dotenvy = "0.15"