[package]
name = "db-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
fred = "9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
common-utils = { path = "../../libs/common-utils" }
dotenvy = "0.15"
chrono = "0.4"
anyhow = "1"
rust_decimal = "1.36"
num-traits = "0.2"