[package]
name = "matching-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fred = "9.2"
rust_decimal = "1.36"
num-traits = "0.2"
anyhow = "1"
dotenvy = "0.15"
common-utils = { path = "../../libs/common-utils" }