[package]
name = "settlement-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fred = "9.2"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
settlement-client = { path = "../../libs/settlement-client" }
common-utils = { workspace = true }
dotenvy = "0.15"
anyhow = "1"
hex = "0.4"